--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
           </script>
         </ul>
       </div>
-      <p style="padding:20px;">2008년부터 후원해주신 열혈팬 분들의 목록입니다.</p>
+      <p style="padding:20px;">2008년부터 후원해주신 열혈팬 분들의 목록입니다.<br><br><br>
+      -업데이트 목록-<br><br>
+      221112 : 명예의전당 시각화 그래프 업데이트
+      </p>
     </div>
   </body>
 </html>
