--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" name="description" content="우왁굳 후원자 랭킹사이트">
+    <meta charset="utf-8">
+    <meta name="description" content="우왁굳 후원자 랭킹사이트"/>
     <title>왁등공신</title>
     <link rel="stylesheet" href="style.css">
   </head>
